gorst page works except the image

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -6,10 +6,30 @@
 
 <body>
     <header>
-        <img src = "logo.jpg" >
+        <img src = "logo.jpg" alt="image error" >
         <h1>LMS - Learning Management System</h1>
     </header>
 
+    <div class="navigation">
+        <a href="login.html">Login</a> | 
+        <a href="leaderboard.htm">Leaderboard</a> | 
+        <a href="index.html">About LMS</a>
+    </div>
+
+    <main>
+        <h2>About LMS</h2>
+        <p>The Learning Management System (LMS) helps students and instructors manage courses, quizzes, and track performance efficiently.</p>
+        Key Features:
+        <ul>
+            <li>Enroll in courses</li>
+            <li>Attempt quizes</li>
+            <li>View leaderboards</li>
+            </ul>
+    </main>
+
+    <footer>
+        <p>© 2025 LMS. All rights reserved.</p>
+      </footer>
 
 
 
