--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Assignment 1</title>
-</head>
+    <head>
+        <title>Assignment 1</title>
+    </head>
 
-<body>
-    <header>
-        <img src = "logo.jpg" alt="image error" >
-        <h1>LMS - Learning Management System</h1>
-    </header>
+    <body>
+        <header>
+            <img src = "logo.jpg" alt="image error" />
+            <h1>LMS - Learning Management System</h1>
+        </header>
 
-    <div class="navigation">
-        <a href="login.html">Login</a> | 
-        <a href="leaderboard.htm">Leaderboard</a> | 
-        <a href="index.html">About LMS</a>
-    </div>
+        <div class="navigation">
+            <a href="login.html">Login</a> | 
+            <a href="leaderboard.html">Leaderboard</a> | 
+            <a href="index.html">About LMS</a>
+        </div>
 
-    <main>
-        <h2>About LMS</h2>
-        <p>The Learning Management System (LMS) helps students and instructors manage courses, quizzes, and track performance efficiently.</p>
-        Key Features:
-        <ul>
-            <li>Enroll in courses</li>
-            <li>Attempt quizes</li>
-            <li>View leaderboards</li>
-            </ul>
-    </main>
+        <main>
+            
+            <h2>About LMS</h2>
+            <p>The Learning Management System (LMS) helps students and instructors manage courses, quizzes, and track performance efficiently.</p>
+            Key Features:
+            <ul>
+                <li>Enroll in courses</li>
+                <li>Attempt quizes</li>
+                <li>View leaderboards</li>
+                </ul>
+        </main>
 
-    <footer>
-        <p>© 2025 LMS. All rights reserved.</p>
-      </footer>
+        <footer>
+            <p>© 2025 LMS. All rights reserved.</p>
+        </footer>
 
-</body>
+    </body>
 </html>
