--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 
     <body>
         <header>
-            <img src = "logo.jpg" alt="image error" />
+            <img src = "logo.jpg" alt="image error" width="100px" height="100px" />
             <h1>LMS - Learning Management System</h1>
             <h2>LMS Login</h2>
         </header>
