--- a/leaderboard.html
+++ b/leaderboard.html
@@ -5,17 +5,77 @@
 
     <body>
         <header>
-            <img src = "logo.jpg" alt="image error" />
+            <img src = "logo.jpg" alt="image error" width="100px" height="100px" />
             <h1>LMS - Learning Management System</h1>
         </header>
-
-
+        <div class="navigation">
+            <a href="index.html">Homepage</a> | 
+            <a href="course_view.html">Courses</a>
+        </div>
         <main>
-
+        <br>
+        <br>
+        <table style="width: 100%; border: 1px solid black; border-collapse: collapse;">
+            <tr style="background-color: #4BAE50; color: white; border: 1px solid black;">
+                <td colspan="5" style="text-align: center; border: 1px solid black;">
+                    <h1 style="margin: 0; font-size: 40px;">Leaderboard</h1>
+                </td>
+            </tr>
+            <tr style="border: 1px solid black; font-size: 25px;">
+                <th style="border: 1px solid black; text-align: center;">Rank</th>
+                <th style="border: 1px solid black; text-align: center;">Profile Picture</th>
+                <th style="border: 1px solid black; text-align: center;">Name</th>
+                <th style="border: 1px solid black; text-align: center;">Total Score</th>
+                <th style="border: 1px solid black; text-align: center;">Course</th>
+            </tr>
+            <tr style="background-color: gold; font-size: 25px;">
+                <td style="border: 1px solid black; text-align: center;">1</td>
+                <td style="border: 1px solid black; text-align: center;"><img src="student.png" alt="image error" width="100px" height="100px" /></td>
+                <td style="border: 1px solid black; text-align: center;">John Doe</td>
+                <td style="border: 1px solid black; text-align: center;">95</td>
+                <td style="border: 1px solid black; text-align: center;">Web Development</td>
+            </tr>
+            <tr style="background-color: silver; font-size: 25px;">
+                <td style="border: 1px solid black; text-align: center;" rowspan="2">2</td>
+                <td style="border: 1px solid black; text-align: center;"><img src="student.png" alt="image error" width="100px" height="100px" /></td>
+                <td style="border: 1px solid black; text-align: center;">Jane Smith</td>
+                <td style="border: 1px solid black; text-align: center;">90</td>
+                <td style="border: 1px solid black; text-align: center;">Data Structures</td>
+            </tr>
+            <tr style="background-color: silver; font-size: 25px;">
+                <td style="border: 1px solid black; text-align: center;"><img src="student.png" alt="image error" width="100px" height="100px" /></td>
+                <td style="border: 1px solid black; text-align: center;">Emily White</td>
+                <td style="border: 1px solid black; text-align: center;">90</td>
+                <td style="border: 1px solid black; text-align: center;">Algorithms</td>
+            </tr>
+            <tr style="background-color: #CD7E31; font-size: 25px;">
+                <td style="border: 1px solid black; text-align: center;">3</td>
+                <td style="border: 1px solid black; text-align: center;"><img src="student.png" alt="image error" width="100px" height="100px" /></td>
+                <td style="border: 1px solid black; text-align: center;">Michael Brown</td>
+                <td style="border: 1px solid black; text-align: center;">85</td>
+                <td style="border: 1px solid black; text-align: center;">Machine Learning</td>
+            </tr>
+            <tr style="font-size: 25px;">
+                <td style="border: 1px solid black; text-align: center;">4</td>
+                <td style="border: 1px solid black; text-align: center;"><img src="student.png" alt="image error" width="100px" height="100px" /></td>
+                <td style="border: 1px solid black; text-align: center;">Sarah Johnson</td>
+                <td style="border: 1px solid black; text-align: center;">80</td>
+                <td style="border: 1px solid black; text-align: center;">Networking</td>
+            </tr>
+            <tr style="background-color: #E3E1E1; font-size: 25px;">
+                <td style="border: 1px solid black; text-align: center;">5</td>
+                <td style="border: 1px solid black; text-align: center;"><img src="student.png" alt="image error" width="100px" height="100px" /></td>
+                <td style="border: 1px solid black; text-align: center;">Rob Miller</td>
+                <td style="border: 1px solid black; text-align: center;">75</td>
+                <td style="border: 1px solid black; text-align: center;">Networking</td>
+            </tr>
+        </table>
+        
+        
         </main>
 
         <footer>
-
+            <p>© 2025 LMS. All rights reserved.</p>
         </footer>
 
     </body>
