fixed navigation for course_view

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <a href="index.html">Homepage</a>
         </div>
         <main>
-            <form>
+            <form action="course_view.html" method="get">
                 <!--username, password(masked), login button, forgot password link-->
                 <br>
                 <br>
